--- a/css/style-design.css
+++ b/css/style-design.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15%
 }
 
 
@@ -48,7 +49,7 @@ body {
 }
 
 .card-sedans {
-    background-color: hsl(31, 77%, 52%);
+    background-color: hsl(31, 77%, 52% );
 }
 
 .card-suv {
@@ -58,6 +59,9 @@ body {
 .card-lux {
     background-color: hsl(179, 100%, 13%);
 }
+
+
+
 
 .card-sedans img ,
 .card-suv img ,
