--- a/css/style-design.css
+++ b/css/style-design.css
@@ -2,12 +2,12 @@
 
 body {
     width: 100%;
-    height: 90vh;
+    /* min-height: 90vh; */
     line-height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 15%
+    margin-top: 3%;
 }
 
 
@@ -49,15 +49,18 @@ body {
 }
 
 .card-sedans {
-    background-color: hsl(31, 77%, 52% );
+    background-image: linear-gradient(to bottom, hsl(31, 77%, 52% ) , hsl(53, 100%, 55%));
+    backdrop-filter: blur(14px);
 }
 
 .card-suv {
-    background-color: hsl(184, 100%, 22%);
+    background-image: linear-gradient(to bottom, hsl(184, 100%, 22% , 0.6) , hsl(160, 100%, 50% , 0.6));
+    backdrop-filter: blur(11px);
 }
 
 .card-lux {
-    background-color: hsl(179, 100%, 13%);
+    background-image: linear-gradient(to bottom, hsl(179, 100%, 13% , 0.6) , hsl(162, 81%, 42% , 0.6));
+    backdrop-filter: blur(11px);
 }
 
 
@@ -139,15 +142,15 @@ body {
 }
 
 .card-sedans .more {
-    color: hsl(31, 77%, 52%);
+    color: #FFE61B;
 }
 
 .card-suv .more {
-    color: hsl(184, 100%, 22%);
+    color: #00FFAB;
 }
 
 .card-lux .more {
-    color: hsl(179, 100%, 13%);
+    color: #14C38E;
 }
 
 
